--- a/templates/repositorios.html
+++ b/templates/repositorios.html
@@ -20,7 +20,7 @@
                     {% for repositorio in repositorios %}
                     <tr>
                         <td>{{repositorio[1]}}</td>
-                        <td>{{repositorio[2]}}</td>
+                        <td><a href='{{repositorio[2]}}'></a></td>
                         <td>{{repositorio[3]}}</td>
                         <td>{{repositorio[4]}}</td>
                     </tr>
